* Mon Dec 26 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Changed pki::pki_dir parameter to pki::base_dir
- Updated acceptance tests
- Fixed bugs in ordering

* Tue Dec 13 2016 Jeanne Greulich <jgreulich.greulich@onyxpoint.com> - 6.0.0-0
- Global catalyst updates
- Strong Type updates
- Changed default for pki directory to /etc/pki/simp from /etc/pki

* Wed Nov 23 2016 Jeanne Greulich <jgreulich.greulich@onyxpoint.com> - 5.0.0-0
- update requirement versions

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Updated to compliance_markup version 2

* Fri Sep 30 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.2.4-0
- Fixed dependencies in `metadata.json` prior to a Forge push.

* Wed Jul 06 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.3-0
- Fixed a permissions flapping issue between a file resource and the 'sync'
  provider.

* Tue Apr 12 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 4.2.2-0
- Removed custom type deprecation warning

* Mon Mar 28 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.1-0
- Removed extraneous cacerts keys
- Updated the README
- Fixed code comments

* Sat Mar 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.0-0
- Added the ability to copy from arbitrary OS locations for pki::copy. This was
  mainly to support stunnel.

* Tue Feb 23 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-9
- Added compliance function support

* Mon Jan 18 2016 Carl Caum <carl@puppetlabs.com> - 4.1.0-8
- Allow PKI file content source to be modified.

* Mon Dec 14 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-7
- Remove erroneous test5.simp.vm key from the keydist directory

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.1.0-6
- Migration to simplib and simpcat (lib/ only)

* Tue Oct 13 2015 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.0-5
- If a directory is placed in keydist/cacerts, the directory structure is copied