@@ -5,59 +5,113 @@
 # This is particularly important when dealing with SELinux enabled services
 # since they tend to react poorly to symlinks.
 #
-# @param name [Stdlib::Absolutepath]
-#   The path to the directory where the certificates will be housed
+# @param name [Variant[String,Stdlib::Absolutepath]]
 #
-#   * You will need to ensure that all parent directories have been properly
-#     created
+#   * If $pki = true or $pki = 'simp' this parameter will be used to namespace
+#     certificates in /etc/pki/simp_apps/$name.
 #
-#   * A 'pki' directory will be created under this space
-#       * For example, if you set this to ``/foo/bar`` then ``/foo/bar/pki``
-#         will be created
+#   * If $pki = false, this variable has no effect.
 #
-# @param source
+# @param source [Stdlib::Absolutepath]
 #   The path to the PKI directory that you wish to copy
 #
-#   * This must have the following structure:
-#       * ``<path>/cacerts``
-#       * ``<path>/private``
-#       * ``<path>/public``
+#     * This must have the following structure:
+#         * ``<path>/cacerts``
+#         * ``<path>/private``
+#         * ``<path>/public``
 #
-#   * **NOTE:** No other directories will be copied!
+#     * **NOTE:** No other directories will be copied!
 #
-# @param owner
+# @param destination Optional[Stdlib::Absolutepath]
+#   Optional. The destination that PKI certs get copied to.
+#
+#     * If $pki = false:
+#       * You *must* specify $destination.
+#       * You will need to ensure that all parent directories have been properly
+#         created
+#       * A 'pki' directory will be created under this space
+#         * For example, if you set this to ``/foo/bar`` then ``/foo/bar/pki``
+#           will be created
+#
+#     * If $pki = true or 'simp':
+#       * This variable has no effect.
+#
+# @param owner [String]
 #   The owner of the directories/files that get copied
 #
-# @param group
+# @param group [String]
 #   The group of the directories/files that get copied
 #
-# @param pki
-#   If set to ``simp`` it will include the ``::pki`` class to copy certs from
-#   the puppet server to ``$::pki::pki_dir``
+# @param pki [Variant[Enum['simp'],Boolean]]
+#
+#   * If set to ``simp`` or ``true``
+#     * Certificates will be centralized in /etc/pki/simp_apps/, and copied to
+#       /etc/pki/simp_apps/$name/pki.
+#
+#   * If set to ``simp``
+#     * Include the ``::pki`` class
+#
+#   * If set to ``false``
+#     * Certificates will *not* be centralized, and you must provide a $destination.
 #
 # @author Trevor Vaughan <mailto:tvaughan@onyxpoint.com>
 #
 define pki::copy (
-  Stdlib::Absolutepath          $source = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp' }),
-  String                        $owner  = 'root',
-  String                        $group  = 'root',
-  Variant[Boolean,Enum['simp']] $pki    = simplib::lookup('simp_options::pki', { 'default_value' => false}),
+  Stdlib::Absolutepath           $source      = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp' }),
+  Optional[Stdlib::Absolutepath] $destination = undef,
+  String                         $owner       = 'root',
+  String                         $group       = 'root',
+  Variant[Boolean,Enum['simp']]  $pki         = simplib::lookup('simp_options::pki', { 'default_value' => false}),
 ) {
 
-  if $pki == 'simp' {
-    include '::pki'
+  if !$pki {
+    if !$destination {
+      fail('You must specify a $destination if $pki false.')
+    }
+    else {
+      $_destination = $destination
+    }
+  }
+  else {
+    if $destination {
+      notify { "pki_copy_${name}":
+        message => "Pki is managing cert destination. Ignoring specified destination ${destination}"
+      }
+    }
 
-    Class['pki'] -> Pki::Copy[$name]
+    # Only ensure this directory exists if pki is true or 'simp'.
+    # There is a reasonable expectation if users have pki globally
+    # disabled, they do not intend to use this directory for cert
+    # centralization.
+    ensure_resource('file', '/etc/pki/simp_apps', {
+      'ensure' => 'directory',
+      'owner'  => 'root',
+      'group'  => 'root',
+      'mode'   => '0640'}
+    )
+
+    $_destination = "/etc/pki/simp_apps/${name}"
+    file { $_destination:
+      ensure => 'directory',
+      owner  => 'root',
+      group  => 'root',
+      mode   => '0640'
+    }
+
+    if $pki == 'simp' {
+      include '::pki'
+      Class['pki'] -> Pki::Copy[$name]
+    }
   }
 
-  file { "${name}/pki":
+  file { "${_destination}/pki":
     ensure => 'directory',
     owner  => $owner,
     group  => $group,
     mode   => '0640'
   }
 
-  file { "${name}/pki/public":
+  file { "${_destination}/pki/public":
     ensure    => 'directory',
     owner     => $owner,
     group     => $group,
@@ -68,7 +122,7 @@ define pki::copy (
     show_diff => false
   }
 
-  file { "${name}/pki/private":
+  file { "${_destination}/pki/private":
     ensure    => 'directory',
     owner     => $owner,
     group     => $group,
@@ -79,7 +133,7 @@ define pki::copy (
     show_diff => false
   }
 
-  file { "${name}/pki/cacerts":
+  file { "${_destination}/pki/cacerts":
     ensure    => 'directory',
     owner     => $owner,
     group     => $group,
